--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@zeiss/appinsights-express-middleware",
+  "name": "appinsights-express-middleware",
   "version": "0.1.0",
   "description": "Middleware for handling Microsoft Application Insights inside an express application.",
   "author": "Kristof Dreier",
