--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "module": "commonjs",
     "target": "es6",
     "lib": ["es2015", "es2016"],
-    "sourceMap": true,
+    "sourceMap": false,
     "outDir": "dist",
     "declaration": true,
     "experimentalDecorators": true,
