--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "appinsights-express-middleware",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Middleware for handling Microsoft Application Insights inside an express application.",
-  "author": "Kristof Dreier",
+  "author": "ZEISS <portal@zeiss.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -33,10 +33,10 @@
     "express": "^4.16.2",
     "husky": "^0.14.3",
     "jest": "^21.2.1",
-    "lint-staged": "^7.0.0",
+    "lint-staged": "^8.0.5",
     "prettier": "^1.7.4",
     "rimraf": "^2.6.2",
-    "ts-jest": "^21.1.2",
+    "ts-jest": "^23.10.4",
     "tslint": "^5.9.1",
     "tslint-config-prettier": "^1.5.0",
     "tslint-plugin-prettier": "^1.3.0",
