--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "appinsights-express-middleware",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Middleware for handling Microsoft Application Insights inside an express application.",
   "author": "ZEISS <portal@zeiss.com>",
   "license": "MIT",
@@ -11,11 +11,11 @@
   "main": "dist",
   "types": "dist",
   "scripts": {
-    "test": "yarn lint && yarn test:unit",
+    "test": "npm run lint && npm run test:unit",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "build": "rimraf dist && tsc",
     "test:unit": "cross-env NODE_ENV=test jest src",
-    "test:watch": "yarn test:unit -- --watch"
+    "test:watch": "npm run test:unit -- --watch"
   },
   "lint-staged": {
     "*.{ts,json,css,md}": [
@@ -24,29 +24,29 @@
     ]
   },
   "devDependencies": {
-    "@types/express": "^4.11.1",
-    "@types/jest": "^21.1.2",
-    "@types/node": "^9.4.6",
-    "@types/uuid": "^3.4.3",
-    "applicationinsights": "^1.0.2",
-    "cross-env": "^5.1.3",
-    "express": "^4.16.2",
-    "husky": "^0.14.3",
-    "jest": "^21.2.1",
-    "lint-staged": "^8.0.5",
-    "prettier": "^1.7.4",
+    "@types/express": "^4.16.0",
+    "@types/jest": "^23.3.10",
+    "@types/node": "^10.12.10",
+    "@types/uuid": "^3.4.4",
+    "applicationinsights": "^1.0.7",
+    "cross-env": "^5.2.0",
+    "express": "^4.16.4",
+    "husky": "^1.2.0",
+    "jest": "^23.6.0",
+    "lint-staged": "^8.1.0",
+    "prettier": "^1.15.2",
     "rimraf": "^2.6.2",
-    "ts-jest": "^23.10.4",
-    "tslint": "^5.9.1",
-    "tslint-config-prettier": "^1.5.0",
-    "tslint-plugin-prettier": "^1.3.0",
-    "typescript": "^2.5.3"
+    "ts-jest": "^23.10.5",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.16.0",
+    "tslint-plugin-prettier": "^2.0.1",
+    "typescript": "^2.9.2"
   },
   "peerDependencies": {
-    "applicationinsights": "^1.0.1",
-    "express": "^4.16.2"
+    "applicationinsights": "^1.x",
+    "express": "^4.x"
   },
   "dependencies": {
-    "uuid": "^3.2.1"
+    "uuid": "^3.3.2"
   }
 }
